fix blog post list spacing

--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -25,6 +25,7 @@ $link-color: #0e3f54
 =bundler-link
   text-decoration: none
   color: $link-color
+  border-bottom: 1px solid transparent
   &:hover
     border-bottom: 1px solid
 
@@ -455,7 +456,8 @@ pre
 ul.posts li
   list-style: none
   font-size: 16px
-  line-height: 1.8em
+  min-height: 1.2em
+  margin-bottom: 10px
   clear: left
 
   .date
